package opdrachten.mediaplayer;

public interface MediaPlayer {
    void play(String audioType, String fileName);
}
